[gd_scene load_steps=17 format=2]

[ext_resource path="res://gfx/SpriteSheets/NPCsnow_dead.png" type="Texture" id=1]
[ext_resource path="res://gfx/SpriteSheets/NPCSnow_walk64.png" type="Texture" id=2]
[ext_resource path="res://props/npc/Ennemy.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 93, 100 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 93, 0, 93, 100 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 186, 0, 93, 100 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 279, 0, 93, 100 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 76 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 76 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 76 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 76 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "dead",
"speed": 20.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "walk",
"speed": 15.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 33.9342
height = 5.69968

[sub_resource type="CapsuleShape2D" id=5]
radius = 293.14
height = 0.0

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 27.3291, 7.99754 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 34.656, 32.4111 )

[node name="Ennemy" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "dead"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection"]
position = Vector2( 0.0153046, 0.0551147 )
shape = SubResource( 5 )

[node name="Touchzones" type="Node2D" parent="."]

[node name="JumpZone" type="Area2D" parent="Touchzones"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Touchzones/JumpZone"]
position = Vector2( 0.673676, -30.0227 )
shape = SubResource( 6 )

[node name="Deathzone" type="Area2D" parent="Touchzones"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Touchzones/Deathzone"]
position = Vector2( 0.247902, 5.89612 )
shape = SubResource( 7 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="detection" to="." method="_on_detection_body_entered"]
[connection signal="body_exited" from="detection" to="." method="_on_detection_body_exited"]
[connection signal="body_entered" from="Touchzones/JumpZone" to="." method="_on_JumpZone_body_entered"]
[connection signal="body_entered" from="Touchzones/Deathzone" to="." method="_on_Deathzone_body_entered"]
